配置并构建Mac独立应用
- 添加应用元信息（名称、描述、作者）
- 调整electron-builder配置
- 成功生成.dmg安装文件

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "infp-campus-flow",
+  "productName": "INFP Campus Flow",
+  "description": "Personal life management system for daily tasks and reflections",
+  "author": "Yuxiang Jiang",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
