修复生产环境托盘图标路径错误
- 添加托盘图标到extraResources
- 使用process.resourcesPath获取生产环境资源路径
- 添加错误处理避免应用崩溃

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -7,6 +7,9 @@ files:
   - electron/**/*
   - dist/**/*
   - package.json
+extraResources:
+  - from: public/tray-icon.png
+    to: tray-icon.png
 mac:
   category: public.app-category.productivity
   hardenedRuntime: true
