--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-electron": "vite build --base ./",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -17,8 +18,7 @@
     "deploy": "gh-pages -d dist",
     "electron": "electron electron/main.cjs",
     "electron-dev": "NODE_ENV=development electron electron/main.cjs",
-    "build-electron": "npm run build && electron-builder",
-    "dist": "npm run build && electron-builder --mac"
+    "dist": "npm run build-electron && electron-builder --mac"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
